# la_config_python_pour_les_cool_kids

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
1_kid/: main.py
1_marcassin/: main.py
1_marcassin/data/raw/: client.csv
2_kid/: main.py
3_cool_kid/: config.py  main.py
4_ultimate_cool_kid/: .env  .env.dev  Dockerfile  config.py  main.py  test_main.py
4_ultimate_cool_kid_pour_deploiement/: config.py  main.py
5_the_toul_way/: .env  main.py
5_the_toul_way/sous_module/: __init__.py  fonctions.py  variables.py
